# minimo

./: .gitignore  Dockerfile  FAQ.md  README.md  goal-conditioning.ipynb  install_redis.sh  pyproject.toml  redis.def  setup.def  setup.sh  tutorial.md
.dstack/: .dstack.yml  dstack_run.sh  dstack_setup.sh
environment/: Cargo.toml
environment/src/: lib.rs  main.rs  python.rs  shell.rs
environment/src/universe/: derivation.rs  mod.rs  proof.rs  term.pest  term.rs  universe.rs
environment/theories/: nats.p  natural_number_game.p
experiments/: conditional-auxiliary-loss.ipynb  goal-conditioning.ipynb
goals/: final_goals.yaml  nat-add-all.json  nat-add-easy.json  nat-add-hard.json  nat-add-scaling-1.json  nat-add-scaling-2.json  nat-add-scaling-3.json  nat-add-scaling-4.json  nat-add-synthetic.json  nat-add-zeros.json  nat-add.json  parse_recorded_goals.py
launch/: run_bootstrap_distributed.sh  start_redis.sh  start_worker.sh
learning/: action.py  bootstrap.py  conjecture.py  example.py  final_goals.yaml  goal.py  hindsight.py  policy.py  problems.py  proofsearch.py  requirements.txt  util.py  worker.py
learning/config/: baseline.yaml  bootstrap.yaml  bootstrap_bak.yaml  dataset.yaml  pretraining.yaml  proofsearch.yaml
learning/config/agent/: curiosity-count.yaml  curiosity-lm-norm.yaml  curiosity-lm-transition.yaml  (+4 more)
learning/extrinsic/: arithmetic.p  propositional-logic.p  propositional-logic.txt
learning/theories/: groups.p  nat-add.p  nat-mul.p  propositional-logic.p
plotting/: hd5f_to_influxdb.py  initialise_hash_cache_with_current_hashes.py
(+9 files in other folders)
